# protobufs-examples

./: CMakeLists.txt  Doxyfile  README.md  conanfile.txt  env.sh
include/: Sample.hpp
proto/: demo.proto  envelope.proto  payload.proto
src/: Sample.cpp  config.h.in
src/examples/: demo.cpp  pb-demo.cpp
tests/: CMakeLists.txt
